Reimplemented class: HttpClientHelper